k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-production
  labels:
    app: backend
    tier: backend
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500
    name: http
  type: NodePort
