k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: frontend-scaler
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30125
